# TransitOps

./: README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c436dcaa7a6_baseline_schema.py
backend/app/: deps.py  main.py
backend/app/core/: config.py  exceptions.py  permissions.py  roles.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: activity.py  document.py  driver.py  enums.py  expense.py  fuel_log.py  id_counter.py  maintenance.py  notification.py  org_settings.py  safety.py  trip.py  user.py  vehicle.py
backend/app/routers/: activity.py  analytics.py  auth.py  documents.py  drivers.py  expenses.py  fuel_logs.py  maintenance.py  notifications.py  safety.py  settings.py  trips.py  users.py  vehicles.py
backend/app/schemas/: activity.py  analytics.py  auth.py  document.py  driver.py  expense.py  fuel_log.py  maintenance.py  notification.py  org_settings.py  safety.py  trip.py  user.py  vehicle.py
backend/app/services/: activity_service.py  analytics_service.py  auth_service.py  document_service.py  driver_service.py  email_service.py  expense_service.py  fleet_service.py  id_service.py  maintenance_service.py  notification_service.py  reminder_service.py  safety_service.py  settings_service.py  storage_service.py  trip_service.py  user_service.py
backend/jobs/: scheduler.py
backend/seed/: seed.py  seed_data.py
backend/tests/: conftest.py  test_auth.py  test_maintenance_coupling.py  test_permissions.py  test_trip_dispatch.py
frontend/: .env.example  index.html  (+2 more)
(+126 files in other folders)
